<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.pentaho.di</groupId>
	<artifactId>pdi</artifactId>
	<version>9.0.3-002</version>
	<packaging>pom</packaging>

	<name>Pentaho Data Integration</name>
	<description>Container pom for Pentaho Data Integration modules</description>
	<url>http://www.pentaho.com</url>

	<parent>
		<groupId>org.pentaho</groupId>
		<artifactId>pentaho-ce-jar-parent-pom</artifactId>
		<version>9.0.0.3-542</version>
	</parent>

	<scm>
		<developerConnection>scm:git:git@github.com:pentaho/pentaho-kettle.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
		<license>
			<name>GNU Lesser General Public License, Version 2.1</name>
			<url>https://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt</url>
			<distribution>repo</distribution>
			<comments></comments>
		</license>
		<license>
			<name>GNU Lesser General Public License, Version 3.0</name>
			<url>https://www.gnu.org/licenses/lgpl-3.0.txt</url>
			<distribution>repo</distribution>
			<comments></comments>
		</license>
	</licenses>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.build.timestamp.format>yyyy-MM-dd hh.mm.ss</maven.build.timestamp.format>
		<maven-surefire-plugin.argLine>-Duser.timezone=UTC -Dfile.encoding=UTF-8 -Duser.language=en -Duser.country=US</maven-surefire-plugin.argLine>

		<!-- License Configuration -->
		<license.licenseName>apache_v2</license.licenseName>

		<!-- Pentaho dependencies -->
		<pentaho-platform.version>9.0.0.3-542</pentaho-platform.version>
		<platform.version>9.0.0.3-542</platform.version>
		<pentaho-reporting.version>9.0.0.3-542</pentaho-reporting.version>
		<pentaho-registry.version>9.0.0.3-542</pentaho-registry.version>
		<pentaho-connections.version>9.0.0.3-542</pentaho-connections.version>
		<mondrian.version>9.0.0.3-542</mondrian.version>
		<commons-xul.version>9.0.0.3-542</commons-xul.version>
		<pentaho-metastore.version>9.0.0.3-542</pentaho-metastore.version>
		<pentaho-capability-manager.version>9.0.0.3-542</pentaho-capability-manager.version>
        <pentaho-metaverse.version>9.0.0.3-542</pentaho-metaverse.version>

		<!-- Third-party dependencies -->
		<org.eclipse.swt.version>4.6</org.eclipse.swt.version>
		<js.version>1.7R3</js.version>
		<commons-codec.version>1.10</commons-codec.version>
		<guava.version>17.0</guava.version>
		<encoder.version>1.2</encoder.version>
		<wstx-asl.version>3.2.4</wstx-asl.version>

<!-- 		<common.version>3.13.0</common.version> -->
<!--     	<jface.version>3.21.0</jface.version> -->
<!--     	<commands.version>3.9.700</commands.version> -->
    	<common.version>3.3.0-v20070426</common.version>
    	<jface.version>3.3.0-I20070606-0010</jface.version>
    	<commands.version>3.3.0-I20070605-0010</commands.version>

		<!-- SKOFRA  -->
        <deem-etl.version>6.1.0.120</deem-etl.version>
        <deem.version>5.1.66</deem.version>
	    <fasterxml-jackson.version>2.11.0</fasterxml-jackson.version>
	    <fasterxml-jackson-databind.version>2.11.0</fasterxml-jackson-databind.version>
		<commons-beanutils.version>1.9.4</commons-beanutils.version>
        <commons-compress.version>1.20</commons-compress.version>
        <jcommon.version>1.0.23</jcommon.version>
        <jfreechart.version>1.0.19</jfreechart.version>
		<javax.servlet-api.version>3.1.0</javax.servlet-api.version>
        <slf4j.version>1.7.30</slf4j.version>
        <jetty.version>9.4.29.v20200521</jetty.version>

	    <dom4j.version>2.1.3</dom4j.version>
	    <jaxen.version>1.2.0</jaxen.version>
		<poi.version>4.0.1</poi.version>
        <httpclient.version>4.5.12</httpclient.version>
        <httpcore.version>4.4.14</httpcore.version>
        <jt400.version>10.2</jt400.version>
   <!-- <h2.version>1.2.131</h2.version> -->
        <h2.version>1.3.176</h2.version>
        
	    <spring.version>4.3.27.RELEASE</spring.version>
        <spring-security.version>4.2.16.RELEASE</spring-security.version>
        
	    
		<!-- Test dependencies -->
		<mockito.version>2.28.2</mockito.version>
		<powermock.version>2.0.7</powermock.version>
		<hamcrest.version>2.2</hamcrest.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.pentaho</groupId>
				<artifactId>commons-xul-core</artifactId>
				<version>${commons-xul.version}</version>
			</dependency>
			<dependency>
				<groupId>org.pentaho</groupId>
				<artifactId>commons-xul-swing</artifactId>
				<version>${commons-xul.version}</version>
			</dependency>
			<dependency>
				<groupId>org.pentaho</groupId>
				<artifactId>commons-xul-swt</artifactId>
				<version>${commons-xul.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.eclipse.swt</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>pentaho</groupId>
				<artifactId>metastore</artifactId>
				<version>${pentaho-metastore.version}</version>
			</dependency>

			<!-- Third-party dependencies -->
			<dependency>
				<groupId>org.eclipse.swt</groupId>
      			<artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
 				<version>${org.eclipse.swt.version}</version>
				<exclusions>
					<exclusion>
						<groupId>*</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.eclipse.swt</groupId>
				<artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
				<version>${org.eclipse.swt.version}</version>
				<exclusions>
					<exclusion>
						<groupId>*</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>rhino</groupId>
				<artifactId>js</artifactId>
				<version>${js.version}</version>
				<exclusions>
					<exclusion>
						<groupId>*</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>${commons-beanutils.version}</version>
				<exclusions>
					<exclusion>
						<groupId>*</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${commons-codec.version}</version>
				<exclusions>
					<exclusion>
						<groupId>*</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
				<exclusions>
					<exclusion>
						<groupId>*</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.owasp.encoder</groupId>
				<artifactId>encoder</artifactId>
				<version>${encoder.version}</version>
				<exclusions>
					<exclusion>
						<groupId>*</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>${h2.version}</version>
				<exclusions>
					<exclusion>
						<groupId>*</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.codehaus.woodstox</groupId>
				<artifactId>wstx-asl</artifactId>
				<version>${wstx-asl.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcprov-jdk15on</artifactId>
				<version>1.65</version>
			</dependency>

			<!-- Test dependencies -->
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
				<exclusions>
					<exclusion>
						<groupId>*</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest</artifactId>
				<version>${hamcrest.version}</version>
				<scope>test</scope>
				<exclusions>
					<exclusion>
						<groupId>*</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.powermock</groupId>
				<artifactId>powermock-module-junit4</artifactId>
				<version>${powermock.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.powermock</groupId>
				<artifactId>powermock-api-mockito2</artifactId>
				<version>${powermock.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifestEntries>
							<Compile-Timestamp>${maven.build.timestamp}</Compile-Timestamp>
							<Compile-User>${user.name}</Compile-User>
							<Implementation-ProductID>${project.artifactId}</Implementation-ProductID>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>base</id>
			<activation>
				<property>
					<name>!skipDefault</name>
				</property>
			</activation>
			<modules>
				<module>engine-ext</module>
				<module>core</module>
				<module>engine</module>
				<module>dbdialog</module>
				<module>ui</module>
			</modules>
		</profile>
		<profile>
			<id>plugins</id>
			<activation>
				<property>
					<name>!skipDefault</name>
				</property>
			</activation>
			<modules>
				<module>plugins</module>
			</modules>
		</profile>
		<profile>
			<id>assemblies</id>
			<activation>
				<property>
					<name>!skipDefault</name>
				</property>
			</activation>
			<modules>
				<module>assemblies</module>
			</modules>
		</profile>
	</profiles>


	<repositories>
		<repository>
			<id>bdo-nexus</id>
			<url>http://10.241.62.16:8081/nexus/content/groups/public/</url>
		</repository>

<!-- 		<repository> -->
<!-- 			<id>pentaho-public</id> -->
<!-- 			<name>Pentaho Public</name> -->
<!-- 			<url>http://nexus.pentaho.org/content/groups/omni/</url> -->
<!-- 			<releases> -->
<!-- 				<enabled>true</enabled> -->
<!-- 				<updatePolicy>daily</updatePolicy> -->
<!-- 			</releases> -->
<!-- 			<snapshots> -->
<!-- 				<enabled>true</enabled> -->
<!-- 				<updatePolicy>interval:15</updatePolicy> -->
<!-- 			</snapshots> -->
<!-- 		</repository> -->

	</repositories>

	<distributionManagement>
		<repository>
			<id>bdo-nexus</id>
			<url>http://10.241.62.16:8081/nexus/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>bdo-nexus</id>
			<url>http://10.241.62.16:8081/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>


	<pluginRepositories>
		<pluginRepository>
			<id>bdo-nexus</id>
			<url>http://10.241.62.16:8081/nexus/content/groups/public/</url>
		</pluginRepository>
	</pluginRepositories> 
</project>
